--- a/RChatClient/RChatClientWindow.xaml
+++ b/RChatClient/RChatClientWindow.xaml
@@ -5,12 +5,23 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:RChatClient"
         mc:Ignorable="d"
-        Title="RChat Client" Height="450" Width="784" ResizeMode="NoResize">
+        Title="RChat Client" Height="450" Width="784">
     <Grid>
-        <GroupBox Header="Чат" Height="381" Margin="0,-2,10,0" VerticalAlignment="Top" HorizontalAlignment="Right" Width="756"/>
-        <TextBlock HorizontalAlignment="Left" Margin="14,385,0,0" TextWrapping="Wrap" Text="Адрес сервера:" VerticalAlignment="Top" Height="23" Width="125" FontSize="16"/>
-        <TextBox x:Name="ServerAddress" HorizontalAlignment="Left" Height="25" Margin="139,384,0,0" TextWrapping="Wrap" Text="localhost:4000" VerticalAlignment="Top" Width="383" FontSize="16"/>
-        <Button x:Name="ConnectButton" Content="Подключиться" HorizontalAlignment="Left" Margin="527,386,0,0" VerticalAlignment="Top" Width="116" Height="21"/>
-        <Rectangle x:Name="ConnectionIndicator" Fill="#FF574F4E" HorizontalAlignment="Left" Height="23" Margin="663,384,0,0" Stroke="Black" VerticalAlignment="Top" Width="99"/>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="390*"/>
+            <RowDefinition Height="29*"/>
+        </Grid.RowDefinitions>
+        <GroupBox Header="Чат" Margin="10,-2,10,48">
+            <ListBox x:Name="ChatListBox" Margin="0,10,-2,-1">
+                <ListBoxItem Content="Chat initialized..."/>
+            </ListBox>
+        </GroupBox>
+        <TextBlock Margin="14,0,0,13" TextWrapping="Wrap" Text="Адрес сервера:" FontSize="16" Grid.RowSpan="2" Height="21" VerticalAlignment="Bottom" HorizontalAlignment="Left" Width="125"/>
+        <TextBox x:Name="ServerAddress" Margin="139,0,254,12" TextWrapping="Wrap" Text="localhost:4000" FontSize="16" Grid.RowSpan="2" Height="23" VerticalAlignment="Bottom"/>
+        <Button x:Name="ConnectButton" Content="Подключиться" Margin="0,0,133,12" Grid.RowSpan="2" Height="23" VerticalAlignment="Bottom" HorizontalAlignment="Right" Width="116"/>
+        <Rectangle x:Name="ConnectionIndicator" Fill="#FF574F4E" Margin="0,0,10,12" Stroke="Black" Grid.RowSpan="2" Height="23" VerticalAlignment="Bottom" HorizontalAlignment="Right" Width="118"/>
+        <TextBlock HorizontalAlignment="Left" Margin="14,0,0,18" TextWrapping="Wrap" Text="Отправить сообщение:" Width="178" FontSize="16" Height="25" VerticalAlignment="Bottom"/>
+        <TextBox x:Name="MessageTextBox" Margin="205,0,133,18" TextWrapping="Wrap" Text="Сообщение..." FontSize="16" Height="25" VerticalAlignment="Bottom"/>
+        <Button x:Name="SendButton" Content="Отправить" Margin="0,0,10,18" Height="25" VerticalAlignment="Bottom" HorizontalAlignment="Right" Width="118"/>
     </Grid>
 </Window>
