--- a/RChatClient/RChatClientWindow.xaml
+++ b/RChatClient/RChatClientWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Name="RChatClient" x:Class="RChatClient.MainWindow"
+﻿<Window x:Name="RChatClient" x:Class="RChatClient.RChatClientWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -18,10 +18,10 @@
         </GroupBox>
         <TextBlock Margin="14,0,0,13" TextWrapping="Wrap" Text="Адрес сервера:" FontSize="16" Grid.RowSpan="2" Height="21" VerticalAlignment="Bottom" HorizontalAlignment="Left" Width="125"/>
         <TextBox x:Name="ServerAddress" Margin="139,0,254,12" TextWrapping="Wrap" Text="localhost:4000" FontSize="16" Grid.RowSpan="2" Height="23" VerticalAlignment="Bottom"/>
-        <Button x:Name="ConnectButton" Content="Подключиться" Margin="0,0,133,12" Grid.RowSpan="2" Height="23" VerticalAlignment="Bottom" HorizontalAlignment="Right" Width="116"/>
+        <Button x:Name="ConnectButton" Content="Подключиться" Margin="0,0,133,12" Grid.RowSpan="2" Height="23" VerticalAlignment="Bottom" HorizontalAlignment="Right" Width="116" Click="ConnectButton_Click"/>
         <Rectangle x:Name="ConnectionIndicator" Fill="#FF574F4E" Margin="0,0,10,12" Stroke="Black" Grid.RowSpan="2" Height="23" VerticalAlignment="Bottom" HorizontalAlignment="Right" Width="118"/>
         <TextBlock HorizontalAlignment="Left" Margin="14,0,0,18" TextWrapping="Wrap" Text="Отправить сообщение:" Width="178" FontSize="16" Height="25" VerticalAlignment="Bottom"/>
         <TextBox x:Name="MessageTextBox" Margin="205,0,133,18" TextWrapping="Wrap" Text="Сообщение..." FontSize="16" Height="25" VerticalAlignment="Bottom"/>
-        <Button x:Name="SendButton" Content="Отправить" Margin="0,0,10,18" Height="25" VerticalAlignment="Bottom" HorizontalAlignment="Right" Width="118"/>
+        <Button x:Name="SendButton" Content="Отправить" Margin="0,0,10,18" Height="25" VerticalAlignment="Bottom" HorizontalAlignment="Right" Width="118" Click="SendButton_Click"/>
     </Grid>
 </Window>
