--- a/RChatServer/App.xaml
+++ b/RChatServer/App.xaml
@@ -1,7 +1,7 @@
-﻿<Application x:Class="RChat.App"
+﻿<Application x:Class="RChatServer.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:RChat"
+             xmlns:local="clr-namespace:RChatServer"
              StartupUri="RChatServerWindow.xaml">
     <Application.Resources>
          
