Significant progress Client can communicate with server and vice versa Several clients supported
pending:
server address should be taken from the connection string
all clients should get other clients' messages (on first connection)
human-readable client names instead of numbered tokens
stability improvement

--- a/RChatClient/RChatClientWindow.xaml
+++ b/RChatClient/RChatClientWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:RChatClient"
         mc:Ignorable="d"
-        Title="RChat Client" Height="450" Width="784">
+        Title="RChat Client" Height="450" Width="784" Closed="RChatClient_Closed">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="390*"/>
